# Flam-Assignment

./: .gitignore  ALL_FIXES_SUMMARY.md  ANDROID_CONNECTION_FIX.md  ANDROID_WEB_INTEGRATION_GUIDE.md  APP_RUNNING_STATUS.md  BUILD_COMPLETE.md  BUILD_TEST_GUIDE.md  GITHUB_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALL_APK_GUIDE.md  NDK_INSTALLATION_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  RUN_APP_GUIDE.md  WEB_VIEWER_FIXED.md  WEB_VIEWER_IMPLEMENTATION_SUMMARY.md  setup-github.ps1  test-integration.ps1
app/: build.gradle.kts
app/src/androidTest/java/max/ohm/assignment/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv-processor.cpp  opencv-processor.h
app/src/main/java/max/ohm/assignment/: MainActivity.kt
app/src/main/java/max/ohm/assignment/camera/: CameraHandler.kt
app/src/main/java/max/ohm/assignment/gl/: GLRenderer.kt
app/src/main/java/max/ohm/assignment/jni/: NativeProcessor.kt
app/src/main/java/max/ohm/assignment/network/: WebServerClient.kt
app/src/main/java/max/ohm/assignment/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/max/ohm/assignment/utils/: FPSCounter.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/max/ohm/assignment/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: FIX_GUIDE.md  README.md  WEB_INTEGRATION_GUIDE.md  index.html  live.html  package.json  test-viewer.html  tsconfig.json  viewer.ts
